# deer-flow

./: .env.example  .gitignore  Makefile  README.md  config.example.yaml  main.py  pyproject.toml  运行说明.txt
backend/: CLAUDE.md  README.md  pyproject.toml
backend/src/: client.py
backend/src/agents/lead_agent/: agent.py  prompt.py
backend/src/agents/memory/: prompt.py  queue.py  updater.py
backend/src/agents/middlewares/: memory_middleware.py  uploads_middleware.py
backend/src/config/: agents_config.py  app_config.py  extensions_config.py  model_config.py  paths.py
backend/src/gateway/: app.py
backend/src/gateway/routers/: agents.py  models.py
backend/src/models/: factory.py
backend/src/reflection/: resolvers.py
backend/src/skills/: loader.py  parser.py
backend/src/tools/builtins/: setup_agent_tool.py
backend/tests/: test_client.py  test_client_live.py  test_custom_agent.py  test_lead_agent_model_resolution.py  test_memory_upload_filtering.py  test_reflection_resolvers.py  test_skills_loader.py  test_uploads_middleware_core_logic.py
docker/nginx/: nginx.conf  nginx.local.conf
frontend/src/app/workspace/: layout.tsx
frontend/src/components/workspace/: input-box.tsx  thread-title.tsx
frontend/src/core/agents/: api.ts
frontend/src/core/api/: api-client.ts
frontend/src/core/artifacts/: hooks.ts  loader.ts
frontend/src/core/config/: index.ts
frontend/src/core/messages/: utils.ts
frontend/src/core/models/: types.ts
frontend/src/core/settings/: hooks.ts  local.ts
frontend/src/core/threads/: hooks.ts  types.ts  utils.ts
(+13 files in other folders)
